--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,12 @@
 main {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
     height: 100%;
     gap: 15px;
+    width: 100%;
+    max-width: 1600px;
 }
 
 section {
@@ -160,6 +166,41 @@ iframe {
 .table-title {
     text-align: center;
     width: 100%;
+}
+
+.box-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+
+    width: fit-content;
+}
+
+.box-grid > .box {
+    width: 100px;
+    height: 100px;
+
+    font-size: 4em;
+}
+
+.tic-tac-toe > header {
+    width: 100%;
+}
+
+.tic-tac-toe > header > h1 {
+    text-align: center;
+}
+
+.box-grid > .box:is(:nth-child(1), :nth-child(2), :nth-child(4), :nth-child(5), :nth-child(7), :nth-child(8)) {
+    border-right: 4px solid var(--chat-sent);
+}
+.box-grid > .box:is(:nth-child(1), :nth-child(2), :nth-child(3), :nth-child(4), :nth-child(5), :nth-child(6)) {
+    border-bottom: 4px solid var(--chat-sent);
+}
+
+.score {
+    font-size: large;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 600px) {
