--- a/src/css/style.css
+++ b/src/css/style.css
@@ -111,6 +111,8 @@ section {
 
 .question {
     margin-top: 10px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .skill-table {
@@ -198,6 +200,10 @@ iframe {
     border-bottom: 4px solid var(--chat-sent);
 }
 
+th {
+    padding-bottom: 5px;
+}
+
 .score {
     font-size: large;
     font-weight: bold;
@@ -206,15 +212,17 @@ iframe {
 @media screen and (max-width: 600px) {
     .side-panel {
         width: 100%;
-        max-height: 150px;
+        height: auto;
     }
     main {
         flex-direction: column-reverse !important;
         padding: 5px !important;
+        gap: 5px !important;
     }
     .icon-container {
         flex-direction: row !important;
         height: fit-content !important;
+        margin: 0 !important;
     }
     .project-images {
         flex-direction: column !important;
@@ -230,5 +238,8 @@ iframe {
     }
     .icon-container a {
         font-size: xx-small !important;
+    }
+    .skills {
+        padding: 5px !important;
     }
 } 
