--- a/src/css/style.css
+++ b/src/css/style.css
@@ -260,6 +260,38 @@ th {
     overflow: hidden;
 }
 
+.game-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.game-container ::-webkit-scrollbar {
+    width: 0; 
+    height: 0; 
+}
+
+.code-view {
+    height: 100%;
+    max-height: 500px;
+    overflow-y: auto;
+    font-size: .75em;
+}
+
+.code-view header {
+    position: sticky;
+    top: 0;
+    justify-content: space-between;
+}
+
+.code-view span, .code-view header {
+    padding: 5px;
+    gap: 5px;
+}
+
+.code-view header > span > p {
+    font-size: 2em;
+}
+
 @media screen and (min-width: 600px) {
     .project-images > img:nth-child(1) {
         position: relative;
@@ -293,6 +325,13 @@ th {
 }
 
 @media screen and (max-width: 600px) {
+    .game-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    .code-view code {
+        font-size: .65em;
+    }
     .side-panel {
         width: 100%;
         height: auto;
@@ -340,10 +379,10 @@ th {
     .icon-container a {
         font-size: xx-small !important;
     }
-    .project-info, .card-container {
+    .project-info, .card-container, .game-container, .tic-tac-toe{
         padding: 5px !important;
     }
-    .skills, #project, .project-images, .tools-table, .project-container, .icon-container {
+    .skills, #project, .project-images, .tools-table, .project-container, .icon-container, .code-view > header > span {
         padding: 5px !important;
         gap: 5px !important;
     }
